# pymssql

./: .gitignore  ChangeLog.rst  pyproject.toml  setup.cfg  setup.py  tt.py
.github/workflows/: build.yml  build_wheels.yml  test_linux.yml  test_macos.yml  test_windows.yml
dev/: build.py  build_manylinux_wheels.sh  install.ps1  requirements-dev.txt  requirements-test.txt
dev/windows/: Dockerfile-mssql  start.ps1
pymssql/: version.h
src/: _mssql.pyx
src/pymssql/: __init__.py  _mssql.pxd  _mssql.pyx  _pymssql.pyx  pymssql.pyx
tests/: helpers.py  test_bulk_copy.py  test_connection_timeout.py  test_connections.py  test_quote_simple_value.py  test_sprocs.py  test_sqlalchemy.py  test_types.py
