[build-system]
requires = [
    "setuptools>=54.0",
    "setuptools_scm[toml]>=5.0",
    "wheel>=0.36.2",
    "Cython>=0.29.22"
    ]

[tool.setuptools_scm]
write_to = "src/pymssql/version.h"
write_to_template = 'const char* PYMSSQL_VERSION = "{version}";'
local_scheme = "no-local-version"

[tool.cibuildwheel.linux]
environment = { PYMSSQL_FREETDS = "./deps", LD_LIBRARY_PATH = "./deps/lib" }
before-all = [
            "yum install -y openssl-devel",
            "python3 ./dev/build.py --prefix=./deps --static-freetds"
            ]
test-command = "echo 'installed'"
manylinux-x86_64-image = "manylinux2014"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = [
            "apk add openssl-dev",
            "python3 ./dev/build.py --prefix=./deps --static-freetds"
            ]

[tool.cibuildwheel.macos]
before-all = [
            "brew --prefix",
            "brew install openssl@1.1 --universal",
            "python3 ./dev/build.py --prefix=./deps --static-freetds"
            ]

[tool.cibuildwheel.macos.environment]

LDFLAGS = "-L/usr/local/opt/openssl@1.1/lib -L/Users/runner/work/pymssql/pymssql/deps/lib"
CPPFLAGS = "-I/usr/local/opt/openssl@1.1/include -I/Users/runner/work/pymssql/pymssql/deps/include"
PKG_CONFIG_PATH = "/usr/local/opt/openssl@1.1/lib/pkgconfig"
